<resources>
    <string name="app_name">GGD Contact</string>
    <string name="yes">Ja</string>
    <string name="no">Nee</string>
    <string name="save">Opslaan</string>
    <string name="dont_save">Niet opslaan</string>
    <string name="next">Volgende</string>
    <string name="ready">Klaar</string>
    <string name="previous">Vorige</string>
    <string name="begin">Beginnen</string>
    <string name="back">Terug</string>
    <string name="warning">Waarschuwing</string>
    <string name="important">Belangrijk</string>
    <string name="close">Sluiten</string>
    <string name="cancel">Annuleren</string>
    <string name="delete">Verwijderen</string>
    <string name="delete_short">Verwijder</string>
    <string name="completed">Afgerond</string>
    <string name="collapsed">Ingeklapt</string>
    <string name="expanded">Uitgeklapt</string>
    <string name="other">Anders</string>
    <string name="generic_error_prompt_message">Controleer de internetverbinding en probeer het opnieuw.</string>
    <string name="about_app_title">Over de app</string>
    <string name="mycontacts_header">Mijn contacten</string>
    <string name="mycontacts_add_contact">Contact toevoegen</string>
    <string name="mycontacts_grant_permission">Geef toegang</string>
    <string name="mycontacts_deny_permission">Ik doe alles met de hand</string>
    <string name="mycontacts_uploaded_header">Gedeeld met de GGD</string>
    <string name="mycontacts_not_uploaded_header">Nog niet gedeeld met de GGD</string>
    <string name="mycontacts_in_progress_header">Ga hiermee aan de slag</string>
    <string name="mycontacts_done_header">Dit is al gedaan</string>
    <string name="mycontacts_name_unknown">Geen naam bekend</string>
    <string name="mycontacts_delete_data_title">Wil je de gegevens verwijderen?</string>
    <string name="mycontacts_delete_data_summary">Zo worden alle gegevens verwijderd van de contacten die in deze app staan.</string>
    <string name="mycontacts_delete_data_ok">Verwijder</string>
    <string name="mycontacts_delete_data_cancel">Ga terug</string>
    <string name="mycontacts_delete_data_button">Verwijder gegevens</string>
    <string name="upload_data_dialog_title">Wil je nu de gegevens met de GGD delen?</string>
    <string name="upload_data_dialog_summary">Goed om te weten: je kunt hierna nog gegevens aanpassen en deze opnieuw delen.</string>
    <string name="upload_data_dialog_ok">Delen</string>
    <string name="mycontact_privacy_footer"><![CDATA[Help bij het bron- en contactonderzoek. Gegevens blijven op jouw telefoon totdat je ze deelt met de GGD. Lees meer in de <a href=\"https://ggdcontact.nl/nl/privacy-in-app\">privacyverklaring</a>.<br/><br/><a href=\"https://www.toegankelijkheidsverklaring.nl/register/4379\">Digitale toegankelijkheidsverklaring</a>]]></string>
    <string name="header_all_contacts">ALLE CONTACTEN</string>
    <string name="warning_name">Klopt deze naam?</string>
    <string name="error_valid_email">Vul een geldig e-mailadres in</string>
    <string name="error_valid_phone">Dit telefoonnummer lijkt niet geldig, weet je zeker dat dit klopt?</string>
    <string name="error_valid_phone_too_long">Dit telefoonnummer lijkt te veel cijfers te bevatten, weet je zeker dat dit klopt?</string>
    <string name="error_valid_phone_too_short">Dit telefoonnummer lijkt te weinig cijfers te bevatten, weet je zeker dat dit klopt?</string>
    <string name="indexcontact_subtitle">Vul gegevens aan</string>
    <string name="onboarding_start_title">Wat moeten de mensen doen bij wie jij in de buurt bent geweest?</string>
    <string name="onboarding_start_subtext">Het advies verschilt per persoon. Dit hangt af van of jullie afstand hielden en hoe lang de ontmoeting duurde. De app geeft aan of iemand thuis moet blijven en tot wanneer. Deze informatie kan jij daarna makkelijk delen.</string>
    <string name="onboarding_flow_selection_title">Heb je aan de telefoon een code van de GGD gekregen?</string>
    <string name="onboarding_flow_selection_subtext">Let op: dit is niet de GGD-sleutel die je in de CoronaMelder-app vindt.</string>
    <string name="status_app_version">Versie %1$s build %2$s</string>
    <string name="fill_code_title">Vul de code in die je hebt gekregen van de GGD-medewerker</string>
    <string name="fill_code_placeholder">0000-0000-0000</string>
    <string name="fill_code_invalid">Deze code is ongeldig</string>
    <string name="onboarding_privacy_title">Zo gaat GGD Contact om met je gegevens</string>
    <string name="onboarding_privacy_summary"><![CDATA[In de <a href=\"https://ggdcontact.nl/nl/privacy-in-app\">privacyverklaring</a> staat hoe GGD Contact jouw gegevens gebruikt. Dit zijn de belangrijkste punten:]]></string>
    <string name="onboarding_privacy_item1">Gegevens worden pas met de GGD gedeeld als jij laat weten dat je klaar bent en je GGD de app ondersteunt</string>
    <string name="onboarding_privacy_item2">Gegevens worden versleuteld en via een veilige verbinding gedeeld</string>
    <string name="onboarding_privacy_item3">Alleen gegevens die je zelf invult worden gedeeld</string>
    <string name="onboarding_privacy_item4">Het gebruik van de app en het delen van gegevens is vrijwillig</string>
    <string name="onboarding_consent_button_text">Ik heb de privacyverklaring gelezen en begrijp hoe GGD Contact mijn gegevens gebruikt</string>
    <string name="contacts_picker_title">Selecteer contact</string>
    <string name="contact_permission_header">Geef toegang tot je contacten</string>
    <string name="contact_permission_summary">Zo kun je makkelijk contactgegevens aanvullen. Je bepaalt daarna zelf welke gegevens je met de GGD deelt. Wil je de app geen toegang geven? Dan kun je contactgegevens ook handmatig toevoegen.</string>
    <string name="contact_picker_search_hint">Zoek een contact</string>
    <string name="contact_question_select_option">Kiezen</string>
    <string name="unsaved_changes_title">Weet je zeker dat je wilt teruggaan?</string>
    <string name="unsaved_changes_message">De gegevens die je hebt ingevuld worden niet opgeslagen.</string>
    <string name="lived_together_risk_label">Woon je in hetzelfde huis?</string>
    <string name="distance_risk_label">Zijn jullie die dag dicht bij elkaar geweest? (minder dan 1,5 meter)</string>
    <string name="distance_risk_answer_long">Ja, in totaal langer dan een kwartier</string>
    <string name="distance_risk_answer_short">Ja, in totaal korter dan een kwartier</string>
    <string name="distance_risk_answer_no">Nee, we hielden genoeg afstand</string>
    <string name="physical_risk_label">Hebben jullie één of meerdere van deze dingen tijdens jullie ontmoeting gedaan?</string>
    <string name="physical_risk_description"><![CDATA[<ul><li>In het gezicht van de ander gehoest of geniesd</li><li>Gezoend</li><li>Seksueel contact</li><ul>]]></string>
    <string name="same_room_risk_label">Was je langer dan 15 minuten in dezelfde ruimte?</string>
    <string name="contact_section_typeofcontact_header">Over de ontmoeting</string>
    <string name="contact_section_typeofcontact_subtext">Beantwoord een paar vragen</string>
    <string name="contact_section_contactdetails_header">Contactgegevens</string>
    <string name="contact_section_contactdetails_subtext">Vul zo veel mogelijk gegevens aan</string>
    <string name="delete_contact_message">Weet je zeker dat je dit contact wilt verwijderen?</string>
    <string name="delete_contact_no_risk_title">Dit contact heeft geen extra risico op besmetting gelopen</string>
    <string name="delete_contact_no_risk_message">Je hoeft deze persoon dus niet te laten weten dat je besmet bent. Ook heeft de GGD geen gegevens van deze persoon nodig.</string>
    <string name="answer_no">Nee</string>
    <string name="answer_yes">Ja</string>
    <string name="answer_think_yes">Ja, denk het wel</string>
    <string name="answer_know_no">Nee, zeker niet</string>
    <string name="answer_think_no">Nee, denk het niet</string>
    <string name="hint_phone_number">Telefoonnummer</string>
    <string name="hint_phone_number_multiple">Selecteer telefoonnummer</string>
    <string name="hint_email_address">E-mailadres</string>
    <string name="hint_email_address_multiple">Selecteer e-mailadres</string>
    <string name="hint_first_name">Voornaam</string>
    <string name="hint_last_name">Achternaam</string>
    <string name="contact_information_last_exposure_label">Wanneer was de laatste ontmoeting?</string>
    <string name="contact_information_last_exposure_earlier">Eerder</string>
    <string name="contact_information_last_exposure_every_day">Bijna iedere dag</string>
    <string name="contact_section_inform_header">Informatie voor dit contact</string>
    <string name="contact_section_inform_subtext">De leefregels voor deze persoon</string>
    <string name="contact_section_inform_copy">Kopieer leefregels</string>
    <string name="contact_section_inform_copied">Gekopieerd</string>
    <string name="contact_section_inform_call">Bel %s</string>
    <string name="contact_section_icon_one">Stap 1</string>
    <string name="contact_section_icon_two">Stap 2</string>
    <string name="contact_section_icon_three">Stap 3</string>
    <string name="contact_section_announcement_one">Je hebt stap 1 afgerond</string>
    <string name="contact_section_announcement_two">Je hebt stap 2 afgerond</string>
    <string name="contact_section_announcement_three">Je hebt stap 3 afgerond</string>
    <string name="inform_contact_title_index"><![CDATA[Je hebt met de GGD afgesproken dat jij %s informeert]]></string>
    <string name="inform_contact_title_staff"><![CDATA[Je hebt met de GGD afgesproken dat zij %s informeren. Je kunt natuurlijk wel zelf alvast de leefregels delen.]]></string>
    <string name="inform_contact_title_unknown"><![CDATA[De GGD raadt aan om %s alvast te informeren en deze leefregels te delen.]]></string>
    <string name="inform_header"><![CDATA[Dit zijn de leefregels voor %s:]]></string>
    <string name="add_manually">Handmatig toevoegen</string>
    <string name="finalize_sent_title">Bedankt voor het delen van de gegevens met de GGD</string>
    <string name="finalize_sent_subtitle">Je kunt nog contactgegevens aanpassen, contacten toevoegen of een andere aanpassing doorgeven.</string>
    <string name="selfbco_checkdate_symptoms_title">Weet je zeker dat je geen klachten had op %s?</string>
    <string name="selfbco_chronic_symptoms_worsened_title">Was er een moment na %s dat je klachten erger werden?</string>
    <string name="selfbco_chronic_symptoms_title">Is een van deze zaken van toepassing?</string>
    <string name="selfbco_chronic_symptoms_earlier_tested">Ik ben eerder getest (geen corona)</string>
    <string name="selfbco_chronic_symptoms_always_symptoms">Ik heb deze klachten altijd</string>
    <string name="selfbco_chronic_symptoms_all">Beide</string>
    <string name="selfbco_chronic_symptoms_next">Nee, volgende</string>
    <string name="selfbco_checkdate_summary">Ook lichtere klachten zoals een snotneus of vermoeidheid tellen mee.</string>
    <string name="selfbco_date_covid_title">Wanneer heb je je laten testen op corona?</string>
    <string name="selfbco_date_covid_summary">Kies de datum waarop je de (laatste) coronatest hebt gedaan.</string>
    <string name="selfbco_not_sure">Ik weet het niet</string>
    <string name="selfbco_permission_header">Wil je je contactenlijst gebruiken om contactgegevens in te vullen?</string>
    <string name="selfbco_permission_summary">Gebruik je contactenlijst om makkelijk contacten te vinden en contactgegevens in te vullen. Bijvoorbeeld een achternaam of een telefoonnummer.</string>
    <string name="seflco_permission_give_access">Toegang geven</string>
    <string name="selfbco_had_symptoms">Ik had ook die dag klachten</string>
    <string name="selfbco_no_symptoms">Geen klachten</string>
</resources>