<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2020 De Staat der Nederlanden, Ministerie van Volksgezondheid, Welzijn en Sport.
  ~   Licensed under the EUROPEAN UNION PUBLIC LICENCE v. 1.2
  ~
  ~   SPDX-License-Identifier: EUPL-1.2
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:drawablePadding="5dp"
                android:paddingVertical="16dp"
                android:text="@string/previous"
                android:textColor="@color/primary"
                android:textSize="17sp"
                app:drawableStartCompat="@drawable/ic_chevron_left" />

            <ImageView
                android:id="@+id/onboarding_header_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/illustration_user_calendar" />

            <TextView
                android:id="@+id/datecheck_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/selfbco_chronic_symptoms_title"
                android:textAppearance="@style/TextAppearance.App.Headline5"
                android:textSize="@dimen/onboarding_title_textsize" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_earlier_tested"
                style="@style/Widget.App.Button.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/selfbco_chronic_symptoms_earlier_tested"
                app:iconTint="@color/primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_always_symptoms"
                style="@style/Widget.App.Button.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/selfbco_chronic_symptoms_always_symptoms"
                app:iconTint="@color/primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_both"
                style="@style/Widget.App.Button.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/selfbco_chronic_symptoms_all"
                app:iconTint="@color/primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selfbco_chronic_symptoms_next" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>