<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2020 De Staat der Nederlanden, Ministerie van Volksgezondheid, Welzijn en Sport.
  ~   Licensed under the EUROPEAN UNION PUBLIC LICENCE v. 1.2
  ~
  ~   SPDX-License-Identifier: EUPL-1.2
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:paddingVertical="16dp"
                android:text="@string/previous"
                android:textColor="@color/color_primary"
                android:textSize="17sp"
                app:drawableStartCompat="@drawable/ic_chevron_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/onboarding_header_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_permission_header"
                app:layout_constraintBottom_toTopOf="@+id/onboarding_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back_button"
                app:layout_constraintVertical_bias="0.75" />

            <TextView
                android:id="@+id/onboarding_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/selfbco_permission_header"
                android:textAppearance="@style/TextAppearance.App.Headline5"
                android:textSize="@dimen/onboarding_title_textsize"
                app:accessibilityHeading="@{true}"
                app:layout_constraintBottom_toTopOf="@+id/onboarding_subtext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/onboarding_subtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/selfbco_permission_summary"
                android:textSize="@dimen/onboarding_subtext_textsize"
                app:layout_constraintBottom_toTopOf="@+id/btn_manual"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_manual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/gray_lighter"
                android:text="@string/add_manually"
                android:textColor="@color/purple"
                app:iconTint="@color/color_primary"
                app:layout_constraintBottom_toTopOf="@id/btn_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/seflco_permission_give_access"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>